[gd_scene load_steps=2 format=3 uid="uid://cymnx17ejnw4p"]

[ext_resource type="Script" uid="uid://mm43mi0qv7iv" path="res://scripts/menu_main.gd" id="1_jst5u"]

[node name="StatWindow" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_jst5u")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerData" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Text" type="Label" parent="HBoxContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Party window."

[node name="ButtonPanel" type="VBoxContainer" parent="HBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="esc" type="Button" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
layout_mode = 2
text = "close"

[node name="Items" type="Button" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
layout_mode = 2
text = "Items"

[node name="Status" type="Button" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
layout_mode = 2
text = "Status"

[node name="Equip" type="Button" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
layout_mode = 2
text = "Equip"

[node name="save" type="Button" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
layout_mode = 2
text = "Save"

[node name="Option" type="Button" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
layout_mode = 2
text = "Options"

[node name="space" type="PanelContainer" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3

[node name="Gold" type="PanelContainer" parent="HBoxContainer/ButtonPanel"]
auto_translate_mode = 1
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/ButtonPanel/Gold"]
layout_mode = 2

[node name="Gold" type="HBoxContainer" parent="HBoxContainer/ButtonPanel/Gold/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ButtonPanel/Gold/VBoxContainer2/Gold"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Gold:"

[node name="Gold" type="Label" parent="HBoxContainer/ButtonPanel/Gold/VBoxContainer2/Gold"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Time" type="HBoxContainer" parent="HBoxContainer/ButtonPanel/Gold/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ButtonPanel/Gold/VBoxContainer2/Time"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Time:"

[node name="Time" type="Label" parent="HBoxContainer/ButtonPanel/Gold/VBoxContainer2/Time"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[connection signal="focus_entered" from="HBoxContainer/ButtonPanel/esc" to="." method="_on_esc_focus_entered"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/esc" to="." method="_on_esc_pressed"]
[connection signal="focus_entered" from="HBoxContainer/ButtonPanel/Items" to="." method="_on_items_focus_entered"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/Items" to="." method="_on_items_pressed"]
[connection signal="focus_entered" from="HBoxContainer/ButtonPanel/Status" to="." method="_on_status_focus_entered"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/Status" to="." method="_on_status_pressed"]
[connection signal="focus_entered" from="HBoxContainer/ButtonPanel/Equip" to="." method="_on_equip_focus_entered"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/Equip" to="." method="_on_equip_pressed"]
[connection signal="focus_entered" from="HBoxContainer/ButtonPanel/save" to="." method="_on_save_focus_entered"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/save" to="." method="_on_save_pressed"]
[connection signal="focus_entered" from="HBoxContainer/ButtonPanel/Option" to="." method="_on_option_focus_entered"]
[connection signal="pressed" from="HBoxContainer/ButtonPanel/Option" to="." method="_on_option_pressed"]
